update apiSpec
