# apispec.yaml
@@ -32,7 +32,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
+
   /to-do:
+    get:
+      tags:
+        - to_do_app
+      description: get all list
+      summary: get all list 
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/response_get_all_toDo'
+        '400':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorBadRequest'
     post:
       tags:
         - to_do_app
@@ -49,14 +68,71 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ResponseAddTodo'
+                $ref: '#/components/schemas/Response_rows_Affected'
         '400':
           description: Successful response
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorBadRequest'
-
+  
+  /to-do/{id}:
+    put:
+      tags:
+        - to_do_app
+      description: Update to do list by id
+      summary: Update to do list by id 
+      parameters:
+        - name: id
+          in: path
+          description: id to_do list
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/InputUpdateTodo'
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response_rows_Affected'
+        '400':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorBadRequest'
+    
+    delete:
+      tags:
+        - to_do_app
+      description: Delete to do list by id
+      summary: Delete to do list by id 
+      parameters:
+        - name: id
+          in: path
+          description: id to_do list
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Response_rows_Affected'
+        '400':
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorBadRequest'
 
 components:
   # securitySchemes:
@@ -79,6 +155,17 @@ components:
       properties:
         title:
           type: string
+      additionalProperties: false
+      required:
+        - title
+    
+    InputUpdateTodo:
+      type: object
+      properties:
+        title:
+          type: string
+        status:
+          type: boolean
       additionalProperties: false
       required:
         - title
@@ -110,7 +197,7 @@ components:
         - data
         - message
 
-    ResponseAddTodo:
+    Response_rows_Affected:
       type: object
       properties:
         status:
@@ -123,6 +210,36 @@ components:
           required:
             - rows_affected
           additionalProperties: false
+      additionalProperties: false
+      required:
+        - status
+        - data
+    response_get_all_toDo:
+      type: object
+      properties:
+        status:
+          type: string
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+              title:
+                type: string
+              status:
+                type: boolean
+              created_at:
+                type: integer
+              updated_at:
+                type: integer
+            required:
+              - id
+              - title
+              - status
+              - created_at
+              - updated_at
       additionalProperties: false
       required:
         - status
